# gidl

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.deps  Makefile.sandbox  README.md  gidl.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.2.yaml  stack-8.0.yaml  stack.mk  stack.yaml
executables/: Main.hs
src/: Gidl.hs
src/Gidl/: Interface.hs  Parse.hs  Schema.hs  Types.hs
src/Gidl/Backend/: Cabal.hs  Elm.hs  Haskell.hs  Ivory.hs  Rpc.hs  Tower.hs
src/Gidl/Backend/Elm/: Common.hs  Interface.hs  Type.hs
src/Gidl/Backend/Haskell/: Interface.hs  Test.hs  Types.hs
src/Gidl/Backend/Ivory/: Interface.hs  Schema.hs  Test.hs  Types.hs  Unpack.hs
src/Gidl/Backend/Tower/: Interface.hs  Schema.hs  Server.hs
src/Gidl/Interface/: AST.hs
src/Gidl/Types/: AST.hs  Base.hs
support/elm/: Makefile.template  Utils.elm.template  elm-package.json.template
support/ivory/: CodeGen.hs.template  Makefile  Makefile.template  Unpack.hs.template
support/rpc/: Base.hs.template  Makefile
support/tower/: Attr.hs.template  CodeGen.hs.template  Makefile  Makefile.template  default.conf
tests/: .gitignore  Test.hs  example.gidl  example.idl  testtypes.sexpr
