name:                gidl
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Pat Hickey
maintainer:          pat@galois.com
copyright:           2015 Galois Inc
build-type:          Simple
cabal-version:       >=1.10

data-files: support/ivory/Unpack.hs.template,
            support/ivory/CodeGen.hs.template,
            support/ivory/Makefile,
            support/tower/CodeGen.hs.template,
            support/tower/Attr.hs.template,
            support/tower/default.conf,
            support/tower/Makefile,
            support/rpc/Base.hs.template,
            support/rpc/Makefile

library
  exposed-modules:     Gidl,
                       Gidl.Parse,
                       Gidl.Interface,
                       Gidl.Interface.AST,
                       Gidl.Schema,
                       Gidl.Types,
                       Gidl.Types.AST,
                       Gidl.Types.Base,
                       Gidl.Backend.Cabal,
                       Gidl.Backend.Haskell,
                       Gidl.Backend.Haskell.Interface,
                       Gidl.Backend.Haskell.Test,
                       Gidl.Backend.Haskell.Types,
                       Gidl.Backend.Ivory,
                       Gidl.Backend.Ivory.Schema,
                       Gidl.Backend.Ivory.Test,
                       Gidl.Backend.Ivory.Types,
                       Gidl.Backend.Rpc,
                       Gidl.Backend.Tower,
                       Gidl.Backend.Tower.Schema,
                       Gidl.Backend.Tower.Server

  other-modules:       Paths_gidl

  build-depends:       base >=4.7 && <4.8,
                       hashable,
                       mainland-pretty,
                       parsec,
                       pretty-show,
                       transformers,
                       ivory-artifact,
                       s-cargot,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             gidl
  main-is:             Main.hs
  hs-source-dirs:      executables
  build-depends:       base >= 4.6,
                       ivory-artifact,
                       gidl

  default-language:    Haskell2010
  ghc-options:         -Wall
